--- a/beneficios.css
+++ b/beneficios.css
@@ -10,18 +10,19 @@
     align-items: center;
     width: 100%;
     justify-content: center;
+
 }
 
 .contenedorBeneficios > div > figure {
     display: flex;
     flex-direction: column;
     width: calc(50% - 10px);
-    padding: 15px;
+    padding: 15px;    
 }
 
 .contenedorBeneficios > div > figure > img {
     /* object-fit: cover; */
-    margin: 0 auto 20px;
+    margin: 0 auto 10px;
 }
 
 .contenedorBeneficios > div > figure > figcaption {
@@ -29,3 +30,13 @@
     text-align: center;
 }
 
+.descripciones {
+    display: flex;
+    align-items: center;
+
+}
+
+.descripciones p {
+    width: 50%;
+    text-align: center;
+}
